Bug 288936 - Amarok crashes on app startup in IpodHandler::prettyName
Summary: Amarok crashes on app startup in IpodHandler::prettyName
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collections/iPod iPhone (other bugs)
Version First Reported In: 2.4.3
Platform: Ubuntu Linux
: NOR crash
Target Milestone: 2.6
Assignee: Amarok Bugs
URL:
Keywords:
: 288937 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-12-14 05:32 UTC by Eric Runquist
Modified: 2011-12-20 11:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Runquist 2011-12-14 05:32:41 UTC
Application: amarok (2.4.3)
KDE Platform Version: 4.7.2 (4.7.2)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-13-generic i686
Distribution: Ubuntu 11.10

-- Information about the crash:
- What I was doing when the application crashed:
New install of Amarok via Ubuntu Software Center on Ubuntu 11.10. First time I launched Amarok it crashed, and has crashed every time since. I see the splash screen for a few seconds, then it dies.

The crash can be reproduced every time.

-- Backtrace:
Application: Amarok (amarok), signal: Segmentation fault
[Current thread is 1 (Thread 0xb47d4720 (LWP 20627))]

Thread 10 (Thread 0xb3bffb70 (LWP 20629)):
#0  0x00b91416 in __kernel_vsyscall ()
#1  0x07ebd40e in poll () from /lib/i386-linux-gnu/libc.so.6
#2  0x08b8734b in g_poll () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0x08b78896 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0x08b78f9b in g_main_loop_run () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0x03642cea in ?? () from /usr/lib/i386-linux-gnu/libgio-2.0.so.0
#6  0x08b9f5f4 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#7  0x06af79cd in ?? () from /usr/lib/nvidia-current/libGL.so.1
#8  0x07ecc0ce in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 9 (Thread 0xae893b70 (LWP 20632)):
#0  0x00b91416 in __kernel_vsyscall ()
#1  0x07ebd40e in poll () from /lib/i386-linux-gnu/libc.so.6
#2  0x0379b246 in ?? () from /usr/lib/i386-linux-gnu/libpulse.so.0
#3  0x037894ea in pa_mainloop_poll () from /usr/lib/i386-linux-gnu/libpulse.so.0
#4  0x03789d47 in pa_mainloop_iterate () from /usr/lib/i386-linux-gnu/libpulse.so.0
#5  0x03789e24 in pa_mainloop_run () from /usr/lib/i386-linux-gnu/libpulse.so.0
#6  0x0379b1ce in ?? () from /usr/lib/i386-linux-gnu/libpulse.so.0
#7  0x0313f216 in ?? () from /usr/lib/i386-linux-gnu/libpulsecommon-1.0.so
#8  0x06af79cd in ?? () from /usr/lib/nvidia-current/libGL.so.1
#9  0x07ecc0ce in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 8 (Thread 0xa9a3cb70 (LWP 20634)):
#0  0x08184dc6 in pthread_mutex_lock () from /lib/i386-linux-gnu/libpthread.so.0
#1  0x07ed9f14 in pthread_mutex_lock () from /lib/i386-linux-gnu/libc.so.6
#2  0x08b77f53 in g_main_context_check () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0x08b788f0 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0x08b78c2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0x00d26b37 in QEventDispatcherGlib::processEvents (this=0x94ca3e0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#6  0x00cf71dd in QEventLoop::processEvents (this=0xa9a3c1f0, flags=...) at kernel/qeventloop.cpp:149
#7  0x00cf7421 in QEventLoop::exec (this=0xa9a3c1f0, flags=...) at kernel/qeventloop.cpp:201
#8  0x00bfa90b in QThread::exec (this=0x94ba6f0) at thread/qthread.cpp:498
#9  0x00cd7e2d in QInotifyFileSystemWatcherEngine::run (this=0x94ba6f0) at io/qfilesystemwatcher_inotify.cpp:248
#10 0x00bfd7b3 in QThreadPrivate::start (arg=0x94ba6f0) at thread/qthread_unix.cpp:331
#11 0x06af79cd in ?? () from /usr/lib/nvidia-current/libGL.so.1
#12 0x07ecc0ce in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 7 (Thread 0xa7a39b70 (LWP 20637)):
#0  0x01919d10 in clock_gettime () from /lib/i386-linux-gnu/librt.so.1
#1  0x00c5486d in do_gettime (frac=0xa7a38e84, sec=0xa7a38e7c) at tools/qelapsedtimer_unix.cpp:123
#2  QElapsedTimer::start (this=0xa7a38e7c) at tools/qelapsedtimer_unix.cpp:162
#3  0x00cd4652 in QProcessPrivate::waitForReadyRead (this=0xb3c601a0, msecs=-1) at io/qprocess_unix.cpp:940
#4  0x00c8f3a9 in QProcess::waitForReadyRead (this=0xb3c27360, msecs=-1) at io/qprocess.cpp:1685
#5  0x04fa4625 in ScannerJob::getScannerOutput (this=0x9c85aa0) at ../../../../../../src/core-impl/collections/db/ScanManager.cpp:710
#6  0x04fa590d in ScannerJob::run (this=0x9c85aa0) at ../../../../../../src/core-impl/collections/db/ScanManager.cpp:511
#7  0x00eea47d in ThreadWeaver::JobRunHelper::runTheJob (this=0xa7a391cc, th=0x9580988, job=0x9c85aa0) at ../../../threadweaver/Weaver/Job.cpp:106
#8  0x00eea5e3 in ThreadWeaver::Job::execute (this=0x9c85aa0, th=0x9580988) at ../../../threadweaver/Weaver/Job.cpp:135
#9  0x00ee9ae2 in ThreadWeaver::ThreadRunHelper::run (this=0xa7a39254, parent=0x9588fe0, th=0x9580988) at ../../../threadweaver/Weaver/Thread.cpp:95
#10 0x00ee9bca in ThreadWeaver::Thread::run (this=0x9580988) at ../../../threadweaver/Weaver/Thread.cpp:142
#11 0x00bfd7b3 in QThreadPrivate::start (arg=0x9580988) at thread/qthread_unix.cpp:331
#12 0x06af79cd in ?? () from /usr/lib/nvidia-current/libGL.so.1
#13 0x07ecc0ce in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 6 (Thread 0xa71e1b70 (LWP 20638)):
#0  0x01919d10 in clock_gettime () from /lib/i386-linux-gnu/librt.so.1
#1  0x00c547d5 in do_gettime (frac=0xa71e0fb0, sec=0xa71e0fa8) at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0x00d274b6 in QTimerInfoList::updateCurrentTime (this=0x97606b4) at kernel/qeventdispatcher_unix.cpp:339
#4  0x00d2780a in QTimerInfoList::timerWait (this=0x97606b4, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#5  0x00d26053 in timerSourcePrepareHelper (src=<optimized out>, timeout=0xa71e109c) at kernel/qeventdispatcher_glib.cpp:136
#6  0x08b7788c in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#7  0x08b78637 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#8  0x08b78c2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#9  0x00d26b37 in QEventDispatcherGlib::processEvents (this=0x9760548, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#10 0x00cf71dd in QEventLoop::processEvents (this=0xa71e1220, flags=...) at kernel/qeventloop.cpp:149
#11 0x00cf7421 in QEventLoop::exec (this=0xa71e1220, flags=...) at kernel/qeventloop.cpp:201
#12 0x00bfa90b in QThread::exec (this=0x975e3f0) at thread/qthread.cpp:498
#13 0x00bfa9fb in QThread::run (this=0x975e3f0) at thread/qthread.cpp:565
#14 0x00bfd7b3 in QThreadPrivate::start (arg=0x975e3f0) at thread/qthread_unix.cpp:331
#15 0x06af79cd in ?? () from /usr/lib/nvidia-current/libGL.so.1
#16 0x07ecc0ce in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 5 (Thread 0xa61dfb70 (LWP 20640)):
#0  0x00b91416 in __kernel_vsyscall ()
#1  0x08186a5c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
#2  0x07ed9cfc in pthread_cond_wait () from /lib/i386-linux-gnu/libc.so.6
#3  0x00bfdcc0 in wait (time=4294967295, this=0x9589130) at thread/qwaitcondition_unix.cpp:88
#4  QWaitCondition::wait (this=0x9588ff8, mutex=0x9580688, time=4294967295) at thread/qwaitcondition_unix.cpp:160
#5  0x00ee8406 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x9588fe0, th=0x9791a10) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#6  0x00eeaecb in ThreadWeaver::WorkingHardState::waitForAvailableJob (this=0x9580570, th=0x9791a10) at ../../../threadweaver/Weaver/WorkingHardState.cpp:80
#7  0x00ee803a in ThreadWeaver::WeaverImpl::waitForAvailableJob (this=0x9588fe0, th=0x9791a10) at ../../../threadweaver/Weaver/WeaverImpl.cpp:356
#8  0x00eeafcc in ThreadWeaver::WorkingHardState::applyForWork (this=0x9580570, th=0x9791a10) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#9  0x00ee7f93 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9588fe0, th=0x9791a10, previous=0x0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#10 0x00eeafe8 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9580570, th=0x9791a10) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#11 0x00ee7f93 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9588fe0, th=0x9791a10, previous=0x0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#12 0x00eeafe8 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9580570, th=0x9791a10) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#13 0x00ee7f93 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9588fe0, th=0x9791a10, previous=0x0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#14 0x00eeafe8 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9580570, th=0x9791a10) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#15 0x00ee7f93 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9588fe0, th=0x9791a10, previous=0x0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#16 0x00eeafe8 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9580570, th=0x9791a10) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#17 0x00ee7f93 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9588fe0, th=0x9791a10, previous=0x0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#18 0x00eeafe8 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9580570, th=0x9791a10) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#19 0x00ee7f93 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9588fe0, th=0x9791a10, previous=0x0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#20 0x00ee9b14 in ThreadWeaver::ThreadRunHelper::run (this=0xa61df254, parent=0x9588fe0, th=0x9791a10) at ../../../threadweaver/Weaver/Thread.cpp:87
#21 0x00ee9bca in ThreadWeaver::Thread::run (this=0x9791a10) at ../../../threadweaver/Weaver/Thread.cpp:142
#22 0x00bfd7b3 in QThreadPrivate::start (arg=0x9791a10) at thread/qthread_unix.cpp:331
#23 0x06af79cd in ?? () from /usr/lib/nvidia-current/libGL.so.1
#24 0x07ecc0ce in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 4 (Thread 0xa5838b70 (LWP 20641)):
#0  0x00b91416 in __kernel_vsyscall ()
#1  0x08186a5c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
#2  0x07ed9cfc in pthread_cond_wait () from /lib/i386-linux-gnu/libc.so.6
#3  0x00bfdcc0 in wait (time=4294967295, this=0x9589130) at thread/qwaitcondition_unix.cpp:88
#4  QWaitCondition::wait (this=0x9588ff8, mutex=0x9580688, time=4294967295) at thread/qwaitcondition_unix.cpp:160
#5  0x00ee8406 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x9588fe0, th=0x9974648) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#6  0x00eeaecb in ThreadWeaver::WorkingHardState::waitForAvailableJob (this=0x9580570, th=0x9974648) at ../../../threadweaver/Weaver/WorkingHardState.cpp:80
#7  0x00ee803a in ThreadWeaver::WeaverImpl::waitForAvailableJob (this=0x9588fe0, th=0x9974648) at ../../../threadweaver/Weaver/WeaverImpl.cpp:356
#8  0x00eeafcc in ThreadWeaver::WorkingHardState::applyForWork (this=0x9580570, th=0x9974648) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#9  0x00ee7f93 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9588fe0, th=0x9974648, previous=0x0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#10 0x00eeafe8 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9580570, th=0x9974648) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#11 0x00ee7f93 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9588fe0, th=0x9974648, previous=0x0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#12 0x00ee9b14 in ThreadWeaver::ThreadRunHelper::run (this=0xa5838254, parent=0x9588fe0, th=0x9974648) at ../../../threadweaver/Weaver/Thread.cpp:87
#13 0x00ee9bca in ThreadWeaver::Thread::run (this=0x9974648) at ../../../threadweaver/Weaver/Thread.cpp:142
#14 0x00bfd7b3 in QThreadPrivate::start (arg=0x9974648) at thread/qthread_unix.cpp:331
#15 0x06af79cd in ?? () from /usr/lib/nvidia-current/libGL.so.1
#16 0x07ecc0ce in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 3 (Thread 0xa4f87b70 (LWP 20642)):
#0  0x00b91416 in __kernel_vsyscall ()
#1  0x08186a5c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
#2  0x07ed9cfc in pthread_cond_wait () from /lib/i386-linux-gnu/libc.so.6
#3  0x00bfdcc0 in wait (time=4294967295, this=0x9589130) at thread/qwaitcondition_unix.cpp:88
#4  QWaitCondition::wait (this=0x9588ff8, mutex=0x9580688, time=4294967295) at thread/qwaitcondition_unix.cpp:160
#5  0x00ee8406 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x9588fe0, th=0x998fe90) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#6  0x00eeaecb in ThreadWeaver::WorkingHardState::waitForAvailableJob (this=0x9580570, th=0x998fe90) at ../../../threadweaver/Weaver/WorkingHardState.cpp:80
#7  0x00ee803a in ThreadWeaver::WeaverImpl::waitForAvailableJob (this=0x9588fe0, th=0x998fe90) at ../../../threadweaver/Weaver/WeaverImpl.cpp:356
#8  0x00eeafcc in ThreadWeaver::WorkingHardState::applyForWork (this=0x9580570, th=0x998fe90) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#9  0x00ee7f93 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9588fe0, th=0x998fe90, previous=0x0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#10 0x00eeafe8 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9580570, th=0x998fe90) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#11 0x00ee7f93 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9588fe0, th=0x998fe90, previous=0x993d638) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#12 0x00ee9b14 in ThreadWeaver::ThreadRunHelper::run (this=0xa4f87254, parent=0x9588fe0, th=0x998fe90) at ../../../threadweaver/Weaver/Thread.cpp:87
#13 0x00ee9bca in ThreadWeaver::Thread::run (this=0x998fe90) at ../../../threadweaver/Weaver/Thread.cpp:142
#14 0x00bfd7b3 in QThreadPrivate::start (arg=0x998fe90) at thread/qthread_unix.cpp:331
#15 0x06af79cd in ?? () from /usr/lib/nvidia-current/libGL.so.1
#16 0x07ecc0ce in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 2 (Thread 0xa45ffb70 (LWP 20643)):
#0  0x00b91416 in __kernel_vsyscall ()
#1  0x08186a5c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
#2  0x07ed9cfc in pthread_cond_wait () from /lib/i386-linux-gnu/libc.so.6
#3  0xb711d883 in ?? () from /usr/lib/i386-linux-gnu/libQtWebKit.so.4
#4  0xb711d99f in ?? () from /usr/lib/i386-linux-gnu/libQtWebKit.so.4
#5  0x06af79cd in ?? () from /usr/lib/nvidia-current/libGL.so.1
#6  0x07ecc0ce in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 1 (Thread 0xb47d4720 (LWP 20627)):
[KCrash Handler]
#7  0x05d3d781 in Meta::IpodHandler::prettyName (this=0x9539098) at ../../../../../src/core-impl/collections/ipodcollection/handler/IpodHandler.cpp:509
#8  0x05d3a96b in Collections::IpodCollection::prettyName (this=0x94eda08) at ../../../../../src/core-impl/collections/ipodcollection/IpodCollection.cpp:111
#9  0x01048aab in CollectionTreeItem::data (this=0xbfcb907c, role=33) at ../../src/browsers/CollectionTreeItem.cpp:154
#10 0x01051779 in CollectionTreeItemModelBase::dataForItem (this=0x9763398, item=0x94cd160, role=33, level=0) at ../../src/browsers/CollectionTreeItemModelBase.cpp:323
#11 0x01049e33 in CollectionTreeItemModel::data (this=0x9763398, index=..., role=33) at ../../src/browsers/CollectionTreeItemModel.cpp:116
#12 0x010459b2 in data (arole=<optimized out>, this=<optimized out>) at /usr/include/qt4/QtCore/qabstractitemmodel.h:398
#13 CollectionSortFilterProxyModel::lessThanIndex (this=0x9500950, left=..., right=...) at ../../src/browsers/CollectionSortFilterProxyModel.cpp:159
#14 0x0217603a in operator() (r2=0, r1=<optimized out>, this=0xbfcb9434) at itemviews/qsortfilterproxymodel.cpp:80
#15 QAlgorithmsPrivate::qMerge<int*, int const, QSortFilterProxyModelLessThan> (begin=0x97c4380, pivot=0x97c4384, end=0x97c4388, t=@0x97c4380, lessThan=...) at ../../include/QtCore/../../src/corelib/tools/qalgorithms.h:424
#16 0x021761ba in QAlgorithmsPrivate::qStableSortHelper<int*, int, QSortFilterProxyModelLessThan> (begin=0x97c4380, end=0x97c4388, t=@0x97c4380, lessThan=...) at ../../include/QtCore/../../src/corelib/tools/qalgorithms.h:459
#17 0x0216e7b4 in qStableSort<int*, QSortFilterProxyModelLessThan> (lessThan=<optimized out>, end=<optimized out>, start=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qalgorithms.h:212
#18 QSortFilterProxyModelPrivate::sort_source_rows (this=0x94e8df8, source_rows=..., source_parent=...) at itemviews/qsortfilterproxymodel.cpp:464
#19 0x02170b3b in QSortFilterProxyModelPrivate::sort (this=0x94e8df8) at itemviews/qsortfilterproxymodel.cpp:429
#20 0x0212a6cd in _q_sortIndicatorChanged (order=Qt::AscendingOrder, column=<optimized out>, this=0x979ce40) at itemviews/qtreeview.cpp:3695
#21 QTreeView::setModel (this=0x9540ab0, model=0x9500950) at itemviews/qtreeview.cpp:251
#22 0x0105932a in CollectionTreeView::setModel (this=0x9540ab0, model=0x9763398) at ../../src/browsers/CollectionTreeView.cpp:116
#23 0x01090a89 in CollectionWidget::Private::view (this=0x9b84fa8, mode=CollectionWidget::NormalCollections) at ../../src/browsers/collectionbrowser/CollectionWidget.cpp:97
#24 0x01091f75 in CollectionWidget::init (this=0x9b84ff0) at ../../src/browsers/collectionbrowser/CollectionWidget.cpp:182
#25 0x01093e0c in CollectionWidget::qt_metacall (this=0x9b84ff0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x9b87008) at ./CollectionWidget.moc:104
#26 0x00cfeb7d in metacall (argv=0x9b87008, idx=38, cl=QMetaObject::InvokeMetaMethod, object=0x9b84ff0) at kernel/qmetaobject.cpp:237
#27 QMetaObject::metacall (object=0x9b84ff0, cl=QMetaObject::InvokeMetaMethod, idx=38, argv=0x9b87008) at kernel/qmetaobject.cpp:232
#28 0x00d09685 in QMetaCallEvent::placeMetaCall (this=0x9b86898, object=0x9b84ff0) at kernel/qobject.cpp:535
#29 0x00d10b52 in QObject::event (this=0x9b84ff0, e=0x9b86898) at kernel/qobject.cpp:1217
#30 0x01ba1c62 in QWidget::event (this=0x9b84ff0, event=0x9b86898) at kernel/qwidget.cpp:8754
#31 0x01fa7235 in QFrame::event (this=0x9b84ff0, e=0x9b86898) at widgets/qframe.cpp:557
#32 0x01b47d54 in notify_helper (e=0x9b86898, receiver=0x9b84ff0, this=0x8fdbfe0) at kernel/qapplication.cpp:4486
#33 QApplicationPrivate::notify_helper (this=0x8fdbfe0, receiver=0x9b84ff0, e=0x9b86898) at kernel/qapplication.cpp:4458
#34 0x01b4d1a8 in QApplication::notify (this=0x8fdbfe0, receiver=0x9b84ff0, e=0x9b86898) at kernel/qapplication.cpp:4451
#35 0x002f7681 in KApplication::notify (this=0xbfcba164, receiver=0x9b84ff0, event=0x9b86898) at ../../kdeui/kernel/kapplication.cpp:311
#36 0x00cf819e in QCoreApplication::notifyInternal (this=0xbfcba164, receiver=0x9b84ff0, event=0x9b86898) at kernel/qcoreapplication.cpp:787
#37 0x00cfbf93 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#38 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x8e8d2e0) at kernel/qcoreapplication.cpp:1428
#39 0x00cfc0ec in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1321
#40 0x00d266a4 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#41 postEventSourceDispatch (s=0x8efdb40) at kernel/qeventdispatcher_glib.cpp:277
#42 0x08b7825f in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#43 0x08b78990 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#44 0x08b78c2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#45 0x00d26ada in QEventDispatcherGlib::processEvents (this=0x8e8e230, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#46 0x01bffe3a in QGuiEventDispatcherGlib::processEvents (this=0x8e8e230, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#47 0x00cf71dd in QEventLoop::processEvents (this=0xbfcba0d4, flags=...) at kernel/qeventloop.cpp:149
#48 0x00cf7421 in QEventLoop::exec (this=0xbfcba0d4, flags=...) at kernel/qeventloop.cpp:201
#49 0x00cfc19d in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#50 0x01b458f4 in QApplication::exec () at kernel/qapplication.cpp:3760
#51 0x0804ffc2 in main (argc=) at ../../src/main.cpp:289

Reported using DrKonqi
Comment 1 Myriam Schweingruber 2011-12-14 07:26:29 UTC
*** Bug 288937 has been marked as a duplicate of this bug. ***
Comment 2 Matěj Laitl 2011-12-14 10:54:49 UTC
Git commit dc6b06b273f453e9ba3a0b149aca1a9a45a056e2 by Matěj Laitl.
Committed on 14/12/2011 at 11:37.
Pushed by laitl into branch 'master'.

iPod handler: do not crash when master playlist is null

This is a late fix for bug 288936. I've added i18n( "Unknown" ) during
string freeze, but this exact string is already used elsewhere.

Sorry for such a last-minute commit, but this was an easy crashfix.

BUG: 288936
FIXED-IN: 2.5

M  +1    -0    ChangeLog
M  +5    -1    src/core-impl/collections/ipodcollection/handler/IpodHandler.cpp

http://commits.kde.org/amarok/dc6b06b273f453e9ba3a0b149aca1a9a45a056e2
Comment 3 Matěj Laitl 2011-12-14 11:01:54 UTC
Thanks for your report, Eric. This crash should be fixed in Amarok 2.5. (to be released in a couple of days)

However, if your iPod is named "Unknown" in Amarok 2.5 or if you have other problems with it when you'll test with the newest Amarok release, please reopen this bug.