iPod handler: do not crash when master playlist is null

This is a late fix for bug 288936. I've added i18n( "Unknown" ) during
string freeze, but this exact string is already used elsewhere.

Sorry for such a last-minute commit, but this was an easy crashfix.

BUG: 288936
FIXED-IN: 2.5